# fuddly

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Pipfile  README.md  README.rst  TODO  client.py  fuddly_shell.py  pyproject.toml  requirements.txt
data_models/: .gitignore  example.py  example_strategy.py  tuto.py  tuto_strategy.py
data_models/file_formats/: jpg.py  jpg_strategy.py  json.py  json_dm.py  json_strategy.py  pdf.py  pdf_strategy.py  png.py  png_strategy.py  zip.py  zip_strategy.py
data_models/protocols/: http.py  http_strategy.py  pppoe.py  pppoe_strategy.py  sms.py  sms_strategy.py  usb.py  usb_strategy.py
data_models/tutorial/: example.py  example_strategy.py  myproto.py  myproto_strategy.py  tuto.py  tuto_strategy.py
docs/: .gitignore  Makefile  fuddly.1.scd  requirements.txt
docs/source/: api.rst  api_index.rst  conf.py  data_analysis.rst  data_makers.rst  data_manip.rst  data_model.rst  disruptors.rst  evolutionary_fuzzing.rst  examples.rst  framework.rst  fuzzfmk.rst  index.rst  intro.rst  knowledge.rst  overview.rst  packaging.rst  probes.rst  scenario.rst  targets.rst  tutorial.rst
docs/source/images/: dm_constraints.odg  dm_gen.odg  dm_mapping.odg  dm_nodes.odg  zip_mod.odg
framework/: basic_primitives.py  comm_backends.py  config.py  constraint_helpers.py  cosmetics.py  data.py  data_model.py  data_model_builder.py  data_model_helpers.py  database.py  encoders.py  error_handling.py  evolutionary_helpers.py  fmk_db.sql  fuzzing_primitives.py  generic_data_makers.py  global_resources.py  logger.py  monitor.py  node.py  node_builder.py  operator_helpers.py  plumbing.py  project.py  scenario.py  tactics_helpers.py  target.py  target_helpers.py  test.py  value_types.py
framework/dmhelpers/: generic.py  json.py  xml.py
framework/knowledge/: __init__.py  all.py  error.py  evidence.py  feedback_collector.py  feedback_handler.py  information.py  logic.py  oracle.py  refine.py  source.py  table.py  tools.py
framework/knowledge/backends/: __init__.py  naive_oracle.py
framework/targets/: debug.py  local.py  network.py  printer.py  sim.py  ssh.py
fuzzfmk/: basic_primitives.py  data_model.py  data_model_helpers.py  database.py  encoders.py  error_handling.py  fmk_db.sql  fuzzing_primitives.py  generic_data_makers.py  global_resources.py  log_db.sql  logger.py  monitor.py  operator.py  operator_helper.py  operator_helpers.py  plumbing.py  project.py  scenario.py  tactics_helper.py  tactics_helpers.py  target.py  test.py  value_types.py
imported_data/: .gitignore
libs/: debug_facility.py  external_modules.py  fs_utils.py  utils.py
projects/: tuto_proj.py
projects/generic/: standard_proj.py
projects/specific/: usb_proj.py
src/fuddly/: fuddly_shell.py
src/fuddly/cli/: __init__.py  __main__.py  argparse_wrapper.py  error.py  main.py  new.py  run.py  shell.py  tool.py  workspace.py
src/fuddly/cli/templates/data_model/: dm.py  strategy.py
src/fuddly/cli/templates/module/: README.md  pyproject.toml
src/fuddly/cli/templates/skeleton/: __init__.py  prj.py  targets.py
src/fuddly/data_models/file_formats/: jpg.py  json_dm.py  json_dm_strategy.py  pdf.py  pdf_strategy.py  png.py  png_strategy.py  zip.py  zip_strategy.py
src/fuddly/data_models/file_formats/jpg/: dm.py
src/fuddly/data_models/file_formats/json_dm/: dm.py
src/fuddly/data_models/file_formats/pdf/: dm.py  strategy.py
src/fuddly/data_models/file_formats/png/: dm.py
src/fuddly/data_models/file_formats/zip/: dm.py
src/fuddly/data_models/protocols/: http.py  http_strategy.py  pppoe.py  pppoe_strategy.py  sms.py  usb.py
src/fuddly/data_models/protocols/pppoe/: __init__.py
src/fuddly/data_models/tutorial/: myproto.py  myproto_strategy.py  tuto.py  tuto_strategy.py
src/fuddly/data_models/tutorial/tuto/: dm.py  strategy.py
src/fuddly/framework/: basic_primitives.py  comm_backends.py  constraint_helpers.py  cosmetics.py  data.py  data_model.py  database.py  encoders.py  error_handling.py  evolutionary_helpers.py  fuzzing_primitives.py  generic_data_makers.py  global_resources.py  logger.py  monitor.py  node.py  node_builder.py  operator_helpers.py  plumbing.py  project.py  scenario.py  tactics_helpers.py  target_helpers.py  value_types.py
src/fuddly/framework/dmhelpers/: generic.py  json.py  xml.py
src/fuddly/framework/knowledge/: feedback_collector.py  feedback_handler.py
src/fuddly/framework/targets/: debug.py  local.py  network.py  printer.py  sim.py  ssh.py
src/fuddly/libs/: external_modules.py  utils.py
src/fuddly/projects/: .gitignore  tuto_proj.py
src/fuddly/projects/generic/: standard_proj.py
src/fuddly/projects/specific/: usb_proj.py
src/fuddly/projects/tuto/: monitoring.py  prj.py  targets.py
src/fuddly/projects/tuto/scripts/: README
src/fuddly/test/: __main__.py
src/fuddly/test/integration/: __init__.py  test_integration.py
src/fuddly/test/unit/: __init__.py  test_monitor.py  test_node.py  test_node_builder.py  test_plotty.py
src/fuddly/tools/: fmkdb.py
src/fuddly/tools/plotty/: Formula.py  PlottyDatabase.py  __init__.py  plotty.py  utils.py
src/fuddly/tools/plotty/cli/: arguments.py
src/fuddly/tools/plotty/cli/parse/: range.py
src/fuddly/tools/plotty/plot/: PlottyCurve.py  PlottyFigure.py  PlottyFigureArea.py  PlottyPointCloud.py
test/: __init__.py  __main__.py
test/integration/: test_integration.py
test/unit/: __init__.py  test_data_model.py  test_data_model_helpers.py  test_monitor.py  test_node.py  test_node_builder.py  test_plotty.py
test/unit/knowledge/: __init__.py  all.py  test_evidence.py  test_logic.py  test_refine.py  test_source.py  test_table.py  test_weather.py
tools/: fmkdb.py
tools/plotty/: Formula.py  PlottyDatabase.py  globals.py  plotty.py  utils.py
tools/plotty/cli/: arguments.py
tools/plotty/cli/parse/: formula.py  range.py
tools/plotty/plot/: APlottyGeometry.py  PlottyCurve.py  PlottyFigure.py  PlottyFigureArea.py  PlottyPoint.py  PlottyPointCloud.py
