[project]
name = "fuddly"
version = "0.30"
authors = [
  { name="Eric Lacombe", email="eric.lacombe@security-labs.org" },
]
description = "Fuzzing and Data Manipulation Framework (for GNU/Linux)"
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[options]
include_package_data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
fuddly = ["framework/fmk_db.sql"]

[project.scripts]
fuddly_shell = "fuddly.fuddly_shell:main"
fmkdb = "fuddly.tools.fmkdb:main"
plotty = "fuddly.tools.plotty:main"

[project.urls]
"Homepage" = "https://github.com/k0retux/fuddly"
"Bug Tracker" = "https://github.com/k0retux/fuddly/issues"
"Documentation" = "http://fuddly.readthedocs.io"

# Data models and Projects
[project.entry-points."fuddly.data_models"]
jpg = "fuddly.data_models.file_formats.jpg"
json_dm = "fuddly.data_models.file_formats.json_dm"
pdf = "fuddly.data_models.file_formats.pdf"
png = "fuddly.data_models.file_formats.png"
zip = "fuddly.data_models.file_formats.zip"
http = "fuddly.data_models.protocols.http"
pppoe = "fuddly.data_models.protocols.pppoe"
sms = "fuddly.data_models.protocols.sms"
usb = "fuddly.data_models.protocols.usb"
myproto = "fuddly.data_models.tutorial.myproto"
tuto = "fuddly.data_models.tutorial.tuto"

[project.entry-points."fuddly.projects"]
standard = "fuddly.projects.generic.standard_proj"
usb = "fuddly.projects.specific.usb_proj"
tuto = "fuddly.projects.tuto_proj"
