# This is a small configuration file for you ${target} module.
# you can install it using `pip install .`

[project]
name = "${module_name}"
version = "0.0.1"
authors = [
    { name="<YOUR NAME>", email="your@email.here" },
]
description = "Description of your ${target}"
readme = "README.md"
dependencies=["fuddly"] # Add your dependencies here

[project.urls]
"Homepage" = "https://home-page-or-source-repo/url"
"Bug Tracker" = "https://bug-tracker/url"
"Documentation" = "https://documentation/url"

# This is what will link your ${target} to fuddly.
# Without this entry, fuddly won't be able to automagically 
# discover your ${target}.
[project.entry-points."fuddly.${target}s"]
${name}} = "${module_name}"

